[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Main/Game/Items/item.gd" type="Script" id=2]
[ext_resource path="res://KiwiSoda.ttf" type="DynamicFontData" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_char = 1
font_data = ExtResource( 3 )

[node name="Blueprint" type="KinematicBody2D"]
scale = Vector2( 0.667, 0.667 )
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 0.667, 0.667 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 0.667, 0.667 )
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 0.667, 0.667 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -24.0
margin_top = -64.0
margin_right = 24.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 2 )
text = "Item"
align = 1

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="input_event" from="Hitbox" to="." method="_on_Hitbox_input_event"]
[connection signal="mouse_entered" from="Hitbox" to="." method="_on_Hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_Hitbox_mouse_exited"]
